[tool.poetry]
name = "country_guess_hangman_game"
version = "1.0.0"
description = "This game about guessing countries all over the world."
authors = ["Aytac Kasoglu <kasogluaytac44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
